@@ -2,7 +2,7 @@ package com.github.uuidcode.gc.test;
 
 public class UseConcMarkSweepGC extends GC {
     public UseConcMarkSweepGC() {
-        this.addOption("-XX:+UseConcMarkSweepGC");
+        this.useConcMarkSweepGC();
     }
 
     public static void main(String[] args) {
